Build CPP interop client in Git-on-[] as well as in [].
To build client in Git-on-[]:
# regenerate Makefile
net/grpc/tools/buildgen/generate_projects.sh
# generate .pb.h and .pb.cc
protoc --cpp_out=. --grpc_out=. --plugin=protoc-gen-grpc=[]-bin/net/grpc/compiler/cpp_plugin  net/grpc/cpp/test/interop/test.proto net/grpc/cpp/test/interop/empty.proto net/grpc/cpp/test/interop/messages.proto
# Complile and link
net/grpc/tools/build_grpc_dev.sh bins/interop_client

To test against GFE/ESF:
# bring up server
[] build net/grpc/testing/interop:server_components_env
[]-bin/net/grpc/testing/interop/server_components_env --manual --rpc_port=25000
# start client
/tmp/grpc-codebase/bins/interop_client --enable_ssl=true --server_port="server ssl port listening port"

To test [] build against GFE/ESF:
[] run net/grpc/cpp:interop_client  --  --enable_ssl=true --server_port="server ssl port listening port"
	Change on 2014/12/10 by chenw <chenw@google.com>
-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=81821921

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -92,7 +92,7 @@ GTEST_LIB = /usr/src/gtest/src/gtest-all.cc -I/usr/src/gtest
 else
 GTEST_LIB = -lgtest
 endif
-
+GTEST_LIB += -lgflags
 ifeq ($(V),1)
 E = @:
 Q =
