First pass at making the compilers open-sourcable. 	Change on 2014/12/10 by nnoble <nnoble@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=81829127

--- a/templates/Makefile.template
+++ b/templates/Makefile.template
@@ -220,6 +220,14 @@ tools: privatelibs\
 % endfor
 
 
+protoc_plugins:\
+% for tgt in targets:
+% if tgt.build == 'protoc':
+ bins/${tgt.name}\
+% endif
+% endfor
+
+
 buildbenchmarks: privatelibs\
 % for tgt in targets:
 % if tgt.build == 'benchmark':
