Renaming libevent was an oversight, please bear with me.

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,8 +9,8 @@
 	path = third_party/protobuf
 	url = https://github.com/google/protobuf.git
 	branch = v3.0.0-alpha-1
-[submodule "third_party/event2"]
-	path = third_party/event2
+[submodule "third_party/libevent"]
+	path = third_party/libevent
 	url = https://github.com/libevent/libevent.git
 	branch = patches-2.0
 [submodule "third_party/gflags"]
