Add a grpc_ipv6_loopback_available() test utility, and only run IPv6-specific tests on machines that support AF_INET6 sockets bound to ::1.
Listening on :: or connecting to a mapped address should always work.
	Change on 2014/12/10 by pmarks <pmarks@google.com>
-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=81837056

--- a/vsprojects/vs2013/grpc_test_util.vcxproj
+++ b/vsprojects/vs2013/grpc_test_util.vcxproj
@@ -77,6 +77,8 @@
   <ItemGroup>
     <ClCompile Include="..\..\test\core\util\grpc_profiler.c">
     </ClCompile>
+    <ClCompile Include="..\..\test\core\util\ipv6.c">
+    </ClCompile>
     <ClCompile Include="..\..\test\core\util\parse_hexstring.c">
     </ClCompile>
     <ClCompile Include="..\..\test\core\util\port_posix.c">
