Switches the ruby docker build to run from the new all-in-one repo. 	Change on 2014/12/12 by temiola <temiola@google.com> ------------- Created by MOE: http://code.google.com/p/moe-java MOE_MIGRATED_REVID=82000906

--- a/src/ruby/Gemfile
+++ b/src/ruby/Gemfile
@@ -6,8 +6,7 @@ source 'https://rubygems.org'
 #
 # The default value is what's used for gRPC ruby's GCE configuration
 #
-# gem 'beefcake', path: "/var/local/git/beefcake"
-gem 'beefcake', path: "/usr/local/google/repos/beefcake"
+gem 'beefcake', path: "/var/local/git/beefcake"
 
 # Specify your gem's dependencies in grpc.gemspec
 gemspec
